# final-project-sample

./: .gitignore  PROPOSAL.md  README.md  TODO.md  pyproject.toml
airflow/: .env  Dockerfile  docker-compose.yaml
airflow/dags/data_pipeline/: __init__.py  extract_business_licenses.py  extract_commercial_corridors.py  extract_parcels.py  extract_permits.py  extract_planning_districts.py  extract_properties.py  extract_rcos.py  load_business_licenses.py  load_commercial_corridors.py  load_parcels.py  load_permits.py  load_planning_district_display_info.py  load_planning_districts.py  load_properties.py  load_rcos.py  load_safegraph_patterns.py  transform_final_corridors.py
airflow/dags/data_pipeline/sql/final/: buildings_updated.sql  corridor_details.sql  corridors.sql  corridors_overview.sql  sqft_built_per_decade.sql  sqft_updated_per_year.sql  visits_per_day.sql
airflow/dags/data_pipeline/sql/staging/: building_base.sql  buildings.sql  corridor_base.sql  corridor_buildings.sql  corridor_filenames.sql  corridor_geographies.sql  corridor_health.sql  corridor_planning_districts.sql  corridor_visit_counts.sql  corridor_visitor_home_cbgs.sql  dated_safegraph_patterns.sql  home_cbgs.sql  place_geographies.sql  place_visit_counts.sql  place_visitor_home_cbgs.sql
airflow/dags/data_pipeline/static_data/: planning_district_display_info.csv
airflow/dags/report_generator/: __init__.py  generate_report.py
airflow/dags/report_generator/templates/: corridor.html  index.html
airflow/plugins/: pipeline_tools.py
notebooks/: explore_safegraph_patterns_geographies.ipynb
